// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loads subcomponent asynchronously 1`] = `
Array [
  .c0 {
  color: #eee;
  font-weight: 600;
}

@media (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

<span
    className="c0"
  >
    Seconds: 
    0
  </span>,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <p>
    NODE_ENV: 
    test
  </p>,
]
`;

exports[`renders loads subcomponent asynchronously 2`] = `
Array [
  "App Component",
  <br />,
  .c0 {
  color: #eee;
  font-weight: 600;
}

@media (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

<span
    className="c0"
  >
    Seconds: 
    0
  </span>,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <p>
    NODE_ENV: 
    test
  </p>,
]
`;

exports[`renders loads subcomponent asynchronously 3`] = `
Array [
  "App Component",
  <br />,
  .c0 {
  color: #eee;
  font-weight: 600;
}

@media (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

<span
    className="c0"
  >
    Seconds: 
    1
  </span>,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <img
    src={
      Object {
        "default": "test-file-stub",
      }
    }
    style={
      Object {
        "width": 100,
      }
    }
  />,
  <br />,
  <p>
    NODE_ENV: 
    test
  </p>,
]
`;
